feat:add images

--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sumesh.S - Full-Stack Developer | Modern Web Solutions</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <title>sumesh.s - Full-Stack Developer | Modern Web Solutions</title>
     <meta name="description" content="Sumesh.S - Passionate full-stack developer specializing in MERN stack, Next.js, Python, and cutting-edge web technologies. Creating immersive digital experiences." />
     <meta name="author" content="Sumesh.S" />
     <meta name="keywords" content="full-stack developer, MERN stack, React, Node.js, Python, Next.js, web development, portfolio, Sumesh.S" />
-
+   
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Sumesh.S - Full-Stack Developer | Modern Web Solutions" />
     <meta property="og:description" content="Passionate full-stack developer specializing in MERN stack, Next.js, Python, and cutting-edge web technologies." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://Sumesh.Scode.com" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://sumesh.dev/opengraph-image-p98pqg.png" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Sumesh.S_dev" />
     <meta name="twitter:title" content="Sumesh.S - Full-Stack Developer" />
     <meta name="twitter:description" content="Creating immersive digital experiences with modern web technologies" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://sumesh.dev/opengraph-image-p98pqg.png" />
 
     <!-- Favicon -->
-    <link rel="canonical" href="https://Sumesh.Scode.com" />
+    <!-- <link rel="canonical" href="https://Sumesh.Scode.com" /> -->
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -40,7 +41,7 @@
       ],
       "knowsAbout": [
         "JavaScript", "React", "Node.js", "Python", "Next.js", 
-        "MongoDB", "Express.js", "MySQL", "Docker", "AWS"
+        "MongoDB", "Express.js", "MySQL", "Docker", "AWS","Astro","MERN Stack","Full-Stack Development","Web Development","Frontend Development","Backend Development"
       ]
     }
     </script>
