fix: update meta tags and structured data for improved SEO and consistency

--- a/index.html
+++ b/index.html
@@ -3,50 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>sumesh.s - Full-Stack Developer | Modern Web Solutions</title>
-    <meta name="description" content="Sumesh.S - Passionate full-stack developer specializing in MERN stack, Next.js, Python, and cutting-edge web technologies. Creating immersive digital experiences." />
-    <meta name="author" content="Sumesh.S" />
-    <meta name="keywords" content="full-stack developer, MERN stack, React, Node.js, Python, Next.js, web development, portfolio, Sumesh.S" />
-   
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Sumesh.S - Full-Stack Developer | Modern Web Solutions" />
-    <meta property="og:description" content="Passionate full-stack developer specializing in MERN stack, Next.js, Python, and cutting-edge web technologies." />
+
+    <!-- Title -->
+    <title>Sumesh S | Full-Stack Developer (React, Node.js, Next.js, Python)</title>
+
+    <!-- Meta Description -->
+    <meta name="description" content="Sumesh S - Full-stack developer skilled in React, Node.js, Next.js, and Python. I build modern, scalable, and high-performance web applications with MERN stack and cloud solutions." />
+
+    <!-- Keywords (less important for SEO today, but still fine) -->
+    <meta name="keywords" content="Sumesh S, full-stack developer, React developer, Node.js developer, Next.js, Python, MERN stack, web development, portfolio" />
+
+    <!-- Author -->
+    <meta name="author" content="Sumesh S" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://sumeshscode.com" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Sumesh S - Full-Stack Developer | Modern Web Solutions" />
+    <meta property="og:description" content="Passionate full-stack developer specializing in MERN stack, Next.js, and Python. Creating immersive digital experiences." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://Sumesh.Scode.com" />
+    <meta property="og:url" content="https://sumeshscode.com" />
     <meta property="og:image" content="https://sumesh.dev/opengraph-image-p98pqg.png" />
 
-    <!-- Twitter Card Meta Tags -->
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Sumesh.S_dev" />
-    <meta name="twitter:title" content="Sumesh.S - Full-Stack Developer" />
-    <meta name="twitter:description" content="Creating immersive digital experiences with modern web technologies" />
+    <meta name="twitter:creator" content="@sumesh_s_dev" />
+    <meta name="twitter:title" content="Sumesh S - Full-Stack Developer" />
+    <meta name="twitter:description" content="Building scalable and modern web apps with React, Node.js, and Next.js." />
     <meta name="twitter:image" content="https://sumesh.dev/opengraph-image-p98pqg.png" />
 
     <!-- Favicon -->
-    <!-- <link rel="canonical" href="https://Sumesh.Scode.com" /> -->
-    
-    <!-- Structured Data -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Sumesh.S",
+      "name": "Sumesh S",
+      "alternateName": "Sumesh",
       "jobTitle": "Full-Stack Developer",
-      "description": "Passionate full-stack developer specializing in MERN stack, Next.js, Python, and cutting-edge web technologies",
-      "url": "https://Sumesh.Scode.com",
+      "description": "Full-stack developer specializing in React, Node.js, Next.js, Python, and cloud technologies. Experienced in building scalable and modern web applications.",
+      "url": "https://sumeshscode.com",
+      "image": "https://sumesh.dev/opengraph-image-p98pqg.png",
       "sameAs": [
-        "https://github.com/Sumesh.S",
-        "https://linkedin.com/in/Sumesh.S"
+        "https://github.com/sumesh-s",
+        "https://linkedin.com/in/sumesh-s",
+        "https://twitter.com/sumesh_s_dev"
       ],
       "knowsAbout": [
-        "JavaScript", "React", "Node.js", "Python", "Next.js", 
-        "MongoDB", "Express.js", "MySQL", "Docker", "AWS","Astro","MERN Stack","Full-Stack Development","Web Development","Frontend Development","Backend Development"
+        "React.js", "Node.js", "Next.js", "JavaScript", "TypeScript", "Python",
+        "MongoDB", "Express.js", "MySQL", "Docker", "AWS",
+        "MERN Stack", "Web Development", "Frontend Development", "Backend Development"
       ]
     }
     </script>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
